--- a/Web/index.html
+++ b/Web/index.html
@@ -84,13 +84,13 @@
                                             </a>
                                             <ul class="submenu">
                                                 <li>
-                                                    <a href="#" rel="nofollow" target="_self">Vacunas</a>
+                                                    <a href="./vacunas/" rel="nofollow" target="_self">Vacunas</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#" rel="nofollow" target="_self">Nutrición</a>
+                                                    <a href="./nutricion/" rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#" rel="nofollow" target="_self">Operaciones</a>
+                                                    <a href="./operaciones/" rel="nofollow" target="_self">Operaciones</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -414,9 +414,9 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Servicios</h3>
                             <ul class="links">
-                                <li><a href="#" rel="nofollow" target="_self">Vacunas</a></li>
-                                <li><a href="#" rel="nofollow" target="_self">Nutrición </a></li>
-                                <li><a href="#" rel="nofollow" target="_self">Operaciones</a></li>
+                                <li><a href="./vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
+                                <li><a href="./nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
+                                <li><a href="./operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
                             </ul>
                         </div>
                     </div>
@@ -424,11 +424,11 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Enlaces</h3>
                             <ul class="links">
-                                <li><a href="#" rel="nofollow" target="">Mascotas en adopción</a></li>
-                                <li><a href="#" rel="nofollow" target="">Registro de mascotas</a></li>
+                                <li><a href="./adoptar-mascota/" rel="nofollow" target="_self">Mascotas en adopción</a></li>
+                                <li><a href="./registrar-mascota/" rel="nofollow" target="_self">Registro de mascotas</a></li>
                                 <li><a href="./consultas/" rel="nofollow" target="_blank">Consultas en línea</a></li>
                                 <li><a href="./ubicanos/" rel="nofollow" target="_blank">Nuestras sedes</a></li>
-                                <li><a href="./equipo/" rel="nofollow" target="">Nuestro equipo</a></li>
+                                <li><a href="./equipo/" rel="nofollow" target="_self">Nuestro equipo</a></li>
                             </ul>
                         </div>
                     </div>
