--- a/Web/operaciones/index.html
+++ b/Web/operaciones/index.html
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="../assets/css/themify-icons.css">
     <link rel="stylesheet" href="../assets/css/flaticon.css">
     <link rel="stylesheet" href="../assets/css/slick-nav.css">
-    <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Header start -->
@@ -83,7 +81,7 @@
                                             </a>
                                             <ul class="submenu">
                                                 <li>
-                                                    <a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a>
+                                                    <a href="./." rel="nofollow" target="_self">Vacunas</a>
                                                 </li>
                                                 <li>
                                                     <a href="../nutricion/" rel="nofollow" target="_self">Nutrición</a>
@@ -108,102 +106,6 @@
         </div>
     </header>
     <!-- Header end -->
-
-    <section class="ftco-section bg-light">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-1.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Ivan Lopez</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-2.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Maycoll Yupanqui</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-3.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Brayan Salcedo</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-4.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Jhon de la Cruz</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-5.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Luis Ramos</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-6.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Mirella Vasquez</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-7.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Daniel Tello</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-8.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Javier Resto</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
     
     <!-- Footer start -->
     <footer class="footer">
@@ -224,7 +126,7 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Servicios</h3>
                             <ul class="links">
-                                <li><a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
+                                <li><a href="./." rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="../nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
                                 <li><a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
                             </ul>
@@ -238,7 +140,7 @@
                                 <li><a href="../registrar-mascota/" rel="nofollow" target="_self">Registro de mascotas</a></li>
                                 <li><a href="../consultas/" rel="nofollow" target="_blank">Consultas en línea</a></li>
                                 <li><a href="../ubicanos/" rel="nofollow" target="_blank">Nuestras sedes</a></li>
-                                <li><a href="./." rel="nofollow" target="_self">Nuestro equipo</a></li>
+                                <li><a href="../equipo/" rel="nofollow" target="_self">Nuestro equipo</a></li>
                             </ul>
                         </div>
                     </div>
@@ -307,9 +209,5 @@
     <script src="./jquery-slick-nav.js"></script>
     <script src="./main.js"></script>
     <script src="./main2.js"></script>
-
-    <script src="./jquery.min.js"></script>
-    <script src="./jquery.waypoints.min.js"></script>
-    <script src="./main3.js"></script>
 </body>
 </html>
