plantillas editadas para cada página

--- a/Web/index.html
+++ b/Web/index.html
@@ -119,7 +119,7 @@
                         <div class="slider_text">
                             <h3>Registro de<br><span>mascotas</span></h3>
                             <p>Deja de recordar su siguiente vacuna, <br>nosotros lo haremos por ti.</p>
-                            <a href="#" class="boxed-btn4">Registrar mascota</a>
+                            <a href="./registrar-mascota/" class="boxed-btn4">Registrar mascota</a>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                                 Tú puedes ser hoy el dueño que una mascota necesita y así ofrecerle una vida más saludable.
                                 Encuentra a tu mascota ideal en nuestro registro de mascotas en adopción.
                             </p>
-                            <a href="#" class="boxed-btn3" rel="nofollow" target="_self">Ver mascotas en adopción</a>
+                            <a href="./adoptar-mascota/" class="boxed-btn3" rel="nofollow" target="_self">Ver mascotas en adopción</a>
                         </div>
                     </div>
                 </div>
