--- a/Web/nutricion/index.html
+++ b/Web/nutricion/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets Control | Equipo</title>
+    <title>Pets Control | Nutrición</title>
     <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
     <meta name="robots" content="noindex">
@@ -81,10 +81,10 @@
                                             </a>
                                             <ul class="submenu">
                                                 <li>
-                                                    <a href="./." rel="nofollow" target="_self">Vacunas</a>
+                                                    <a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a>
                                                 </li>
                                                 <li>
-                                                    <a href="../nutricion/" rel="nofollow" target="_self">Nutrición</a>
+                                                    <a href="./." rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
                                                     <a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a>
@@ -126,8 +126,8 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Servicios</h3>
                             <ul class="links">
-                                <li><a href="./." rel="nofollow" target="_self">Vacunas</a></li>
-                                <li><a href="../nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
+                                <li><a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
+                                <li><a href="./." rel="nofollow" target="_self">Nutrición </a></li>
                                 <li><a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
                             </ul>
                         </div>
