--- a/Web/vacunas/index.html
+++ b/Web/vacunas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets Control | Equipo</title>
+    <title>Pets Control | Vacunas</title>
     <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
     <meta name="robots" content="noindex">
