--- a/Web/registrar-mascota/index.html
+++ b/Web/registrar-mascota/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets Control | Equipo</title>
+    <title>Pets Control | Registro de mascotas</title>
     <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
     <meta name="robots" content="noindex">
@@ -81,7 +81,7 @@
                                             </a>
                                             <ul class="submenu">
                                                 <li>
-                                                    <a href="./." rel="nofollow" target="_self">Vacunas</a>
+                                                    <a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a>
                                                 </li>
                                                 <li>
                                                     <a href="../nutricion/" rel="nofollow" target="_self">Nutrición</a>
@@ -126,7 +126,7 @@
                         <div class="footer_widget">
                             <h3 class="footer_title">Servicios</h3>
                             <ul class="links">
-                                <li><a href="./." rel="nofollow" target="_self">Vacunas</a></li>
+                                <li><a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="../nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
                                 <li><a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
                             </ul>
@@ -137,7 +137,7 @@
                             <h3 class="footer_title">Enlaces</h3>
                             <ul class="links">
                                 <li><a href="../adoptar-mascota/" rel="nofollow" target="_self">Mascotas en adopción</a></li>
-                                <li><a href="../registrar-mascota/" rel="nofollow" target="_self">Registro de mascotas</a></li>
+                                <li><a href="./." rel="nofollow" target="_self">Registro de mascotas</a></li>
                                 <li><a href="../consultas/" rel="nofollow" target="_blank">Consultas en línea</a></li>
                                 <li><a href="../ubicanos/" rel="nofollow" target="_blank">Nuestras sedes</a></li>
                                 <li><a href="../equipo/" rel="nofollow" target="_self">Nuestro equipo</a></li>
