--- a/Web/operaciones/index.html
+++ b/Web/operaciones/index.html
@@ -20,7 +20,11 @@
     <link rel="stylesheet" href="../assets/css/themify-icons.css">
     <link rel="stylesheet" href="../assets/css/flaticon.css">
     <link rel="stylesheet" href="../assets/css/slick-nav.css">
+    <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
+
+    <link rel="stylesheet" href="./css/flaticon.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Header start -->
@@ -106,7 +110,27 @@
         </div>
     </header>
     <!-- Header end -->
-    
+
+    <div class="our-services section-padding30">
+        <div class="container">
+            <div class="row">
+                <div class=" col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-services text-center mb-30">
+                        <div class="services-ion">
+                            <span class="flaticon-animals"></span>
+                        </div>
+                        <div class="services-cap">
+                            <h5>
+                                <a href="#">Desparacitación</a>
+                            </h5>
+                            <p>consectetur adipiscing elit, serfd dgo eiusmod tempor incididunt ut ore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
