--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -409,17 +409,14 @@
 									<!-- <div class="form-group col-md-12 col-sm-12 col-12 p-1">
   										<input type="file" class="form-control" id="imgComida" accept="image/x-png, image/jpeg">
 									</div> -->
-									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
-										<input type="number" class="form-control" placeholder="Ingresar Cantidad" min="0" max="50" step="1" id="txtStockComida">
-									</div>
-									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
+									<div class="form-group col-md-4 col-sm-4 col-4 p-1">
 										<select class="form-select" id="cboMarcaComida"></select>
 									</div>
-									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
+									<div class="form-group col-md-4 col-sm-4 col-4 p-1">
 										<input type="number" class="form-control" placeholder="Ingresar Precio" min="0" max="500" step="0.01" id="txtPrecioComida">
 									</div>
-									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
-										<input type="number" class="form-control" placeholder="Ingresar Descuento" min="0" max="500" step="0.01" id="txtDescuentoComida">
+									<div class="form-group col-md-4 col-sm-4 col-4 p-1">
+										<select class="form-select" id="cboEspecieComida"></select>
 									</div>
 									<div class="form-group col-md-6 col-sm-6 col-6 p-1">
 										<button class="btn btn-block btn-primary" type="button" id="btnCrearActualizarComida">Crear</button>
@@ -440,10 +437,9 @@
 									<thead>
 										<tr>
 											<th>Descripción</th>
-											<th>Cantidad</th>
 											<th>Marca</th>
 											<th>Precio</th>
-											<th>Descuento</th>
+											<th>Especie</th>
 										</tr>
 									</thead>
 									<tbody></tbody>
