Creadas las plantillas de mis-datos y mis-mascotas

--- a/Web/index.html
+++ b/Web/index.html
@@ -52,7 +52,9 @@
                                         </a>
                                         <ul class="menu2" id="menu2">
                                             <li>
-                                                <a id="linkPerfil">Mi perfil</a>
+                                                <a id="linkPerfil">Panel</a>
+                                                <a href="./mis-datos/" rel="nofollow" target="_self">Mis datos</a>
+                                                <a href="./mis-mascotas/" rel="nofollow" target="_self">Mis mascotas</a>
                                                 <a id="btnSalir">Cerrar Sesión</a>
                                             </li>
                                         </ul>
