--- a/Web/mis-mascotas/index.html
+++ b/Web/mis-mascotas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets Control | Equipo</title>
+    <title>Pets Control | Mis mascotas</title>
     <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
     <meta name="robots" content="noindex">
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="../assets/css/themify-icons.css">
     <link rel="stylesheet" href="../assets/css/flaticon.css">
     <link rel="stylesheet" href="../assets/css/slick-nav.css">
-    <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Header start -->
@@ -53,7 +51,7 @@
                                             <li>
                                                 <a id="linkPerfil">Panel</a>
                                                 <a href="../mis-datos/" rel="nofollow" target="_self">Mis datos</a>
-                                                <a href="../mis-mascotas/" rel="nofollow" target="_self">Mis mascotas</a>
+                                                <a href="./." rel="nofollow" target="_self">Mis mascotas</a>
                                                 <a id="btnSalir">Cerrar Sesión</a>
                                             </li>
                                         </ul>
@@ -110,102 +108,6 @@
         </div>
     </header>
     <!-- Header end -->
-
-    <section class="ftco-section bg-light">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-1.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Ivan Lopez</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-2.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Maycoll Yupanqui</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-3.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Brayan Salcedo</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-4.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Jhon de la Cruz</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-5.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Luis Ramos</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-6.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Mirella Vasquez</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-7.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Daniel Tello</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-12 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch" style="background-image: url(../assets/img/vets/staff-8.jpg);"></div>
-						</div>
-						<div class="text pt-3 px-3 pb-4 text-center">
-							<h3>Javier Resto</h3>
-							<span class="position mb-2">Asistente</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
     
     <!-- Footer start -->
     <footer class="footer">
@@ -240,7 +142,7 @@
                                 <li><a href="../registrar-mascota/" rel="nofollow" target="_self">Registro de mascotas</a></li>
                                 <li><a href="../consultas/" rel="nofollow" target="_blank">Consultas en línea</a></li>
                                 <li><a href="../ubicanos/" rel="nofollow" target="_blank">Nuestras sedes</a></li>
-                                <li><a href="./." rel="nofollow" target="_self">Nuestro equipo</a></li>
+                                <li><a href="../equipo/" rel="nofollow" target="_self">Nuestro equipo</a></li>
                             </ul>
                         </div>
                     </div>
@@ -309,9 +211,5 @@
     <script src="./jquery-slick-nav.js"></script>
     <script src="./main.js"></script>
     <script src="./main2.js"></script>
-
-    <script src="./jquery.min.js"></script>
-    <script src="./jquery.waypoints.min.js"></script>
-    <script src="./main3.js"></script>
 </body>
 </html>
