--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -123,7 +123,7 @@
 								<!-- <a class="dropdown-item" id="opcPerfil2">
 									<i class="align-middle mr-1" data-feather="user"></i> Perfil
 								</a> -->
-								<div class="dropdown-divider"></div>
+								<!-- <div class="dropdown-divider"></div> -->
 								<a class="dropdown-item" id="btnSalir">Salir</a>
 							</div>
 						</li>
@@ -511,9 +511,9 @@
 								<li class="list-inline-item">
 									<a class="text-muted" href="tel:51977513393">Soporte y Ayuda</a>
 								</li>
-								<li class="list-inline-item">
+								<!-- <li class="list-inline-item">
 									<a class="text-muted" href="#">Manual de uso</a>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 					</div>
