fondos de acceso y registro editados

--- a/Web/registro/index.html
+++ b/Web/registro/index.html
@@ -13,6 +13,12 @@
         integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
         crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/accesoYregistro.css">
+
+    <style>
+        body{
+            background-image: url("../assets/img/fondos/fondo-registro.jpg");
+        }
+    </style>
 </head>
 <body>
     <div class="contenedor">
