Página de nutrición con comida de perros y gatos OK

--- a/Web/nutricion/index.html
+++ b/Web/nutricion/index.html
@@ -108,7 +108,193 @@
         </div>
     </header>
     <!-- Header end -->
-    
+
+    <div class="jumbotron col-12 text-center bg-light">
+        <a class="btn btn-outline-success m-1" id="btnVerPerros">Ver comida para Perros</a>
+        <a class="btn btn-outline-success m-1" id="btnVerGatos">Ver comida para Gatos</a>
+    </div>
+
+    <!-- Comidas para perros y gatos -->
+    <div class="row pb-4" id="comidaContenedor">
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/1.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/1.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/2.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/2.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/3.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/3.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/4.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/4.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/5.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/5.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/6.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/6.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/7.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/7.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/perros/8.jpg" alt="comida para perros" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para perro</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para perro</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 gatoCard">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/comidas/gatos/8.jpg" alt="comida para gatos" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Comida para gato</h5>
+                    <hr>
+                    <p class="card-text">Descripción de la comida para gato</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Comidas para perros y gatos -->
+
     <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
