Página de mascotas en adopción OK

--- a/Web/adoptar-mascota/index.html
+++ b/Web/adoptar-mascota/index.html
@@ -108,7 +108,18 @@
         </div>
     </header>
     <!-- Header end -->
-    
+
+    <div class="jumbotron col-12 text-center bg-light" id="btnOpciones">
+        <a class="btn btn-outline-success m-1" id="btnVerPerros">Ver perros en adopción</a>
+        <a class="btn btn-outline-success m-1" id="btnVerGatos">Ver gatos en adopción</a>
+    </div>
+
+    <!-- Mascotas para adoptar -->
+    <div class="row pb-4" id="mascotasContenedor">
+        <!-- Generated from JS -->
+    </div>
+    <!-- Mascotas para adoptar -->
+
     <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
